Fix code overflow scroll

--- a/static/style.css
+++ b/static/style.css
@@ -93,6 +93,7 @@ pre, code {
 
 .highlight {
   margin: 10px;
+  overflow-x: auto;
 }
 
 .flex {
